--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Rogelio Yair Rodriguez Serrano
      </h3>
   </div><!--PAGE GEOLOCALIZACION FIN-->
 <div data-role="page" id="datos">
-  <div data-role="header"
+  <div data-role="header">
    <h2>Tus datos de localizacion son:</h2>
   </div>
   <div data-role="main" class="ui-content">
